--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,11 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Lexi Galantino
 author: Lexi Galantino
 author_nickname: Lexi
 email: contact@galantino.pw
-description: > # this means to ignore newlines until "baseurl:"
+description: >
   Web developer, sound designer, ballroom dancer.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://galantino.pw" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+url: "http://galantino.pw"
 twitter_username: galantlex
 github_username:  galantlex
 
@@ -29,11 +14,12 @@ markdown: kramdown
 kramdown:
   input: GFM # GitHub Flavored Markdown
   hard_wrap: false
-theme: jekyll-athena
 plugins:
   - jekyll-feed
+theme-color: light
 
 github:
+  username: galantlex
   repository_url: https://github.com/galantlex/galantlex.github.io
   branch: master
 
@@ -44,3 +30,4 @@ defaults:
       layout: page
       title: Resume
       permalink: /resume.pdf
+ 
