change the description

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Lexi Galantino
 author_nickname: Lexi
 email: contact@galantino.pw
 description: >
-  Web developer, sound designer, ballroom dancer.
+  A multipurpose website!
 baseurl: ""
 url: "http://galantino.pw"
 twitter_username: galantlex
