make css secure

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author_nickname: Lexi
 email: public@galantino.pw
 description: "<code>human && developer</code>"
 baseurl: ""
-url: "http://galantino.pw"
+url: "https://galantino.pw"
 twitter_username: galantlex
 github_username:  gallexi
 
